# first-agent2agent

./: .env.example  .gitignore  README.md  pyproject.toml  requirements.txt  visualizar_grafo.py
src/: a2a_debate.py  agent_cards.py  cliente_a2a.py  config.py  grafo.py  handlers.py  registro_a2a.py
